@@ -4,6 +4,9 @@ Changelog
 2.0a6 - Unreleased
 ------------------
 
+- Added manage_options restriction for new folderish types.
+  [hannosch]
+
 - Removed no longer required ATCTContent.manage_options restriction.
   [hannosch]
 
